areas index mobile carousel fix + css fix + homepage h5 text align center

--- a/Components/Home/homeComp.module.scss
+++ b/Components/Home/homeComp.module.scss
@@ -307,6 +307,11 @@ section.section {
       line-height: 20px;
     }
   }
+  section.section.niceToMeet {
+    h5 {
+      text-align: center;
+    }
+  }
   .transparentIcon {
     max-width: 100px;
   }
