--- a/pages/areas/areas.module.scss
+++ b/pages/areas/areas.module.scss
@@ -1,3 +1,7 @@
+.regionsWrapper {
+  max-width: 100dvw;
+}
+
 .singleAreaWrapper {
   .contentWrapper {
     padding: 0 100px;
